// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIControlWrapper> renders a flat HTML structure, when inside a group context 1`] = `
Array [
  <label
    className="xui-text-label xui-fieldlabel-layout"
    htmlFor="xui-testGeneratedId-control"
    id="xui-testGeneratedId"
  >
    Small input label
  </label>,
  <div
    className="xui-field-layout xui-has-message"
  >
    <input
      aria-describedby="xui-testGeneratedId-message"
      aria-invalid={false}
      id="xui-testGeneratedId-control"
      type="text"
    />
  </div>,
  <div
    className="xui-validation xui-validation-layout"
    id="xui-testGeneratedId-message"
    role="status"
  >
    I will give you a clue
  </div>,
]
`;

exports[`<XUIControlWrapper> renders a hidden label, invalid, and an error message 1`] = `
<div
  className="xui-field-layout"
>
  <input
    aria-describedby="xui-testGeneratedId-message"
    aria-invalid={true}
    aria-label="Impressive input label"
    id="xui-testGeneratedId-control"
    type="text"
  />
  <div
    className="xui-validation xui-validation-layout xui-validation-is-invalid"
    id="xui-testGeneratedId-message"
    role="status"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M8,16 C3.581722,16 0,12.418278 0,8 C0,3.581722 3.581722,0 8,0 C12.418278,0 16,3.581722 16,8 C16,12.418278 12.418278,16 8,16 Z M7,4 L7,9 L9,9 L9,4 L7,4 Z M7,10 L7,12 L9,12 L9,10 L7,10 Z"
        role="presentation"
      />
    </svg>
    oh no!
  </div>
</div>
`;

exports[`<XUIControlWrapper> renders a simple label based on control ID, when provided 1`] = `
<div
  className="xui-field-layout"
>
  <label
    className="xui-text-label xui-fieldlabel-layout"
    htmlFor="controlSpecificId"
  >
    Impressive input label
  </label>
  <input
    aria-invalid={false}
    id="controlSpecificId"
    type="text"
  />
</div>
`;

exports[`<XUIControlWrapper> renders basic example 1`] = `
<div
  className="xui-field-layout"
>
  <input
    aria-invalid={false}
    id="xui-testGeneratedId-control"
    type="text"
  />
</div>
`;

exports[`<XUIControlWrapper> renders classes and qaHook on all elements 1`] = `
<div
  className="test-field-class xui-field-layout"
>
  <label
    className="test-label-class xui-text-label xui-fieldlabel-layout"
    data-automationid="ctrl-wrapper--label"
    htmlFor="testSpecificLabel-control"
  >
    Small input label
  </label>
  <input
    aria-describedby="testSpecificLabel-message"
    aria-invalid={false}
    id="testSpecificLabel-control"
    type="text"
  />
  <div
    className="xui-validation xui-validation-layout"
    data-automationid="ctrl-wrapper--message"
    id="testSpecificLabel-message"
    role="status"
  >
    I will give you a clue
  </div>
</div>
`;
